--- a/src/index.css
+++ b/src/index.css
@@ -108,11 +108,33 @@ label:hover{
   background: rgba(0, 0, 0, 0.5);
 }
 
-.backdrop img {
-  display: block;
+.modal-group {
+  display: flex;
   max-width: 60%;
   max-height: 80%;
   margin: 60px auto;
   box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);
   border: 3px solid white;
+  background-color: whitesmoke;
+}
+
+.modal-group img {
+  max-width: 60%;
+  max-height: 80%;
+  /* display: block; */
+  /* margin: 60px auto; */
+}
+
+.img-modal-des {
+  width: 100%;
+}
+.img-header {
+  display: flex;
+  justify-content: space-around;
+}
+
+.cart-container {
+  position: absolute;
+  top: 0;
+  right: 100px;
 }
